# agent-librarian

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: README.md  agent.yaml  identity.md  persona.md  principles.md
agent/evals/: safe-scan-cases.md
agent/governance/: policy.md
agent/memory/: policy.md
agent/policies/: public-safety.md
agent/prompts/: system.md
agent/runtime/: state-and-approval-log.md
agent/schemas/: README.md  review-summary.example.json  review-summary.schema.json
agent/state/: state-strategy.md
agent/tools/: agent-librarian-cli.md  tools.yaml
docs/: adoption-guide.md  architecture.md  catalog-format.md  demo-walkthrough.md  developer-workflow.md  forum-demo-runbook.md  forum-feedback-log.md  portable-agent-packages.md  presentation-demo-walkthrough.md  public-safety.md  release-checklist.md  roadmap-v0.4.md  runtime-wrapper-prototype.md  showcase-brief.md  taxonomy-alignment.md  taxonomy-architecture-map.md  two-layer-artifact-catalog.md  warnings-and-overlap.md
evals/: cases.jsonl  rubric.md
examples/: README.md
schemas/: catalog-index.schema.json  diagnostics.schema.json
scripts/: check_packages.py  check_source_snapshot.py
tests/: test_diagnostics.py  test_narration.py  test_overlap.py  test_packages.py  test_parsers.py  test_presenter.py  test_renderers.py  test_report.py  test_runtime_wrapper.py  test_scanner.py  test_source_manifest_schema.py  test_source_snapshot_conformance.py  test_validation.py  test_warning_reference.py  test_warnings.py
(+54 files in other folders)
