[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-librarian"
version = "0.4.0"
description = "Catalog and compare local collections of agentic AI artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "agent-librarian contributors" }]
dependencies = [
  "jsonschema>=4.22",
  "PyYAML>=6.0.1",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
agent-librarian = "agent_librarian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_librarian = ["schema_data/*.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
